update to cubit version 2025.1, fix history bug

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,15 +3,15 @@ cmake_minimum_required(VERSION 3.5)
 project(Cubit-CalculiX)
 
 if (UNIX)
- set(CMAKE_PREFIX_PATH "/opt/Coreform-Cubit-2024.8/cmake")
+ set(CMAKE_PREFIX_PATH "/opt/Coreform-Cubit-2025.1/cmake")
  # python for our swig wrapping
- include_directories("/opt/Coreform-Cubit-2024.8/bin/python3/include/python3.10") 
- set(HDF5_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Utility/HDF5/Linux/1.12.1) 
+ include_directories("/opt/Coreform-Cubit-2025.1/bin/python3/include/python3.10") 
+ set(HDF5_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/Utility/HDF5/Linux/1.12.1)
 endif (UNIX)
 
 if (WIN32)
  SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
- set(CMAKE_PREFIX_PATH "C:/Program Files/Coreform Cubit 2024.8/cmake")
+ set(CMAKE_PREFIX_PATH "C:/Program Files/Coreform Cubit 2025.1/cmake")
  set(Qt5_DIR "C:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5") 
  set(Qt5Core_DIR "C:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5Core") 
  set(Qt5Charts_DIR "C:/Qt/5.15.2/msvc2019_64/lib/cmake/Qt5Charts")
@@ -158,7 +158,7 @@ add_library(calculix_plugin MODULE ${CCXPLUGIN_SRCS})
 set_target_properties(calculix_plugin PROPERTIES SUFFIX ".ccm")
 
 add_library(calculix_core SHARED ${CCXCORE_SRCS})
-target_link_libraries(calculix_core cubiti cubit_util)
+target_link_libraries(calculix_core cubiti cubit_util cubit_gui)
 target_link_libraries(calculix_core clarogui navigation pickwidget clarofw Qt5::Charts Qt5::Widgets)
 target_link_libraries(calculix_core HDF5::HDF5)
 set_target_properties(calculix_core PROPERTIES AUTOMOC 1)
@@ -188,7 +188,7 @@ set_target_properties(calculix_plugin PROPERTIES SUFFIX ".ccm")
 
 add_library(calculix_core SHARED ${CCXCORE_SRCS})
 set_target_properties(calculix_core PROPERTIES SUFFIX ".so")
-target_link_libraries(calculix_core cubiti cubit_util)
+target_link_libraries(calculix_core cubiti cubit_util cubit_gui)
 target_link_libraries(calculix_core clarogui clarofw navigation pickwidget Qt5::Charts Qt5::Widgets)
 target_link_libraries(calculix_core HDF5::HDF5)
 set_target_properties(calculix_core PROPERTIES AUTOMOC 1)
